[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenator"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "ujjwalm29@gmail.com"},
]
description = "Token usage tracking and cost analysis for OpenAI APIs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.3.0",
    "sqlalchemy>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ujjwalm29/tokenator"

[tool.setuptools.package-data]
tokenator = ["migrations/*", "migrations/versions/*"] 