[tool.poetry]
name = "tokenator"
version = "0.1.0"
description = "Token usage tracking wrapper for OpenAI API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "tokenator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"
sqlalchemy = "^2.0.0"
requests = "^2.32.3"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto" 