[tool.poetry]
name = "tokenator"
version = "0.1.10"
description = "Token usage tracking wrapper for LLMs"
authors = ["Ujjwal Maheshwari <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "tokenator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.57.0"
sqlalchemy = "^2.0.0"
requests = "^2.32.3"
alembic = "^1.13.0"
anthropic = "^0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"] 
pythonpath = "src"